# gpp_frc_repo

./: ARCHITECTURE.md  NOTES_IMPLEMENTATION.md  README.md  build.sh  run.sh  run19.sh
.github/workflows/: analyze.yml  build.yml  build19.yml  disasm.yml  disasm_vpp.yml
app/: CMakeLists.txt
app/src/: main.cpp
app19/: CMakeLists.txt  vpp_probe.cpp
ghidra_scripts/: ExportAnalysis.java
jni/: CMakeLists.txt  backend_select.cpp  backend_select.h  blend.comp  config.cpp  config.h  display_rate.cpp  display_rate.h  extrap_bench.cpp  extrap_bench.h  extrap_dump.cpp  extrap_dump.h  extrap_eval.cpp  extrap_eval.h  frame_gen.cpp  frame_gen.h  gpp_engine.cpp  gpp_engine.h  hook_egl.cpp  hook_engine.cpp  hook_vulkan.cpp  interop_bench.cpp  interop_bench.h  log.h  main.cpp  mc_flow.comp  mc_warp.comp  zygisk.hpp
module/: README_INSTALL.txt  cleanfg.prop  customize.sh  gpp_frc_repo.prop  module.prop  service.sh
notes/: lyb.prop  module.prop
scripts/: basic_static.sh  ghidra_full_analysis.sh  ghidra_headless.sh
tools/: disasm.sh  disasm_vpp.sh
